--- a/src/app/screen/product-details/product-details.component.html
+++ b/src/app/screen/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<div class="content container mx-auto mt-6 mb-6">
+<div class=" container m-auto md:w-[1280px] mt-6 mb-6 content">
     <div class="product_details md:flex min-w-[1000px] justify-between mr-[6rem] border-b pb-6">
         <div class="product_dt_img">
             <img [src]="image"
