--- a/src/app/screen/product/product.component.html
+++ b/src/app/screen/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="content container mx-auto mt-3 mb-3 bg-gray-100112222 md:flex ">
+<div class="content container m-auto mt-3 mb-3 md:w-[1280px] md:flex ">
     <div class="category md:block hidden ">
         <div class="left_cate bg-white w-60 border rounded  drop-shadow-md ">
             <div class="title_cate border-b p-3">
@@ -7,11 +7,13 @@
             <div class="main_cate ">
                 <div class="cate_details ">
 
-                    <ul class="" >
-                        <li class="p-3 border-b hover:bg-orange-300 duration-300 cursor-pointer"><a routerLink="/sanpham"class=" font-light ">Tất cả</a></li>
+                    <ul class="">
+                        <li class="p-3 border-b hover:bg-orange-300 duration-300 cursor-pointer"><a
+                                routerLink="/sanpham" class=" font-light ">Tất cả</a></li>
                         <ng-container *ngFor="let item of dataCate">
-                        <li class="p-3 border-b hover:bg-orange-300 duration-300 cursor-pointer"><a routerLink="/danhmuc/{{item.id}}"class=" font-light ">{{item.name}}</a></li>
-                       </ng-container>   
+                            <li class="p-3 border-b hover:bg-orange-300 duration-300 cursor-pointer"><a
+                                    routerLink="/danhmuc/{{item.id}}" class=" font-light ">{{item.name}}</a></li>
+                        </ng-container>
                     </ul>
                 </div>
             </div>
@@ -20,19 +22,11 @@
             <div class="title_favorite">
                 <h3 class="font-bold text-lg mt-3">SẢN PHẨM YÊU THÍCH</h3>
             </div>
-           <div>
+            <div>
                 <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14 " alt="">
-                    </div>
-                    <div class="text_fvt_product">
-                        <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
-                        <span class="font-bold">{{30000| currency: "VND"}}</span>
-                    </div>
-                </div>
-                <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
-                    <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14 " alt="">
                     </div>
                     <div class="text_fvt_product">
                         <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
@@ -41,7 +35,8 @@
                 </div>
                 <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14" alt="">
                     </div>
                     <div class="text_fvt_product">
                         <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
@@ -50,7 +45,8 @@
                 </div>
                 <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14" alt="">
                     </div>
                     <div class="text_fvt_product">
                         <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
@@ -59,55 +55,74 @@
                 </div>
                 <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14" alt="">
                     </div>
                     <div class="text_fvt_product">
                         <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
                         <span class="font-bold">{{30000| currency: "VND"}}</span>
                     </div>
                 </div>
-                <div  class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
+                <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
-                    <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14" alt="">
                     </div>
                     <div class="text_fvt_product">
                         <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
                         <span class="font-bold">{{30000| currency: "VND"}}</span>
                     </div>
                 </div>
-           </div>
+                <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
+                    <div class="img_favorite_product">
+                        <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png"
+                            class="w-14" alt="">
+                    </div>
+                    <div class="text_fvt_product">
+                        <p class="text-orange-400 hover:text-black duration-300"><a href="">TRÀ Ô LONG ĐÀO</a></p>
+                        <span class="font-bold">{{30000| currency: "VND"}}</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-     <div class="product_list">
-         <div class="title ml-5 font-semibold flex justify-between mb-3 ">
-             <div class="title_product">
-                 <p class="text-[25px]">Tất cả sản phẩm</p>
-             </div>
-             <div class="filter_product">
-                sắp xếp theo 
+    <div class="product_list">
+        <div class="title ml-5 font-semibold flex justify-between mb-3 ">
+            <div class="title_product">
+                <p class="text-[25px]">Tất cả sản phẩm</p>
+            </div>
+            <div class="filter_product">
+                sắp xếp theo
                 <select name="" class="border shadow-lg outline-none" id="">
                     <option value="">Mặc định</option>
                     <option value="">Tăng dần theo giá tiền</option>
                     <option value="">Giảm dần theo giá tiền</option>
                     <option value="">Theo sản phẩm yêu thích</option>
                 </select>
-             </div>
-         </div>
-        <div class="product md:grid md:grid-cols-4 md:gap-8 items-center">
+            </div>
+        </div>
+        <div class="product grid md:grid-cols-4 grid-cols-2 md:gap-8 items-center">
             <ng-container *ngFor="let item of dataProduct">
-                <div  class="product_milk mx-4 border border-gray-200 ">
+              <div class="pb-5">
+                <div class="product_milk  overflow-hidden mx-4  border border-gray-200 rounded shadow ">
                     <div class="milk_img">
-                        <a (click)="loading()" routerLink="/sanpham/chitiet/{{item.link_sp}}"><img [src]="item.image" class="md:w-[262px] " alt=""></a>
+                        <a (click)="loading()" routerLink="/sanpham/chitiet/{{item.link_sp}}"><img
+                                class="hover:scale-125 duration-300" [src]="item.image" alt=""></a>
                     </div>
-                    <div  class="milk_text text-center bg-gray-100 py-4 ">
-                        <p class="font-semibold">{{item.name}}</p>
+                    <div class="milk_text  text-center bg-gray-100 py-4   translate-y-10">
+                        <a routerLink="/sanpham/chitiet/{{item.link_sp}}">
+                            <p class="font-semibold">{{item.name}}</p>
+                        </a>
                         <p>{{item.price| currency: "VND"}}</p>
-                        <button class=" bg-orange-300 px-4 py-1 mt-3 hover:outline hover:outline-offset-1 hover:outline-orange-300 hover:bg-white translate-all">ĐẶT HÀNG</button>
+                        <button
+                            class="bg-orange-300 px-4 py-1 relative top-5 mb-2 hover:outline hover:outline-offset-1 hover:outline-orange-300 hover:bg-white translate-all">ĐẶT
+                            HÀNG</button>
                     </div>
                 </div>
+              </div>
             </ng-container>
-            
-           
+
+
         </div>
-     </div>
+    </div>
 </div>
