--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="bg-rose-50 ">
-    <div class="container mx-auto md:flex  md:justify-between ">
+    <div class="container mx-auto md:w-[1280px] md:flex  md:justify-between text-center ">
       <div class="menu_1">
         <div class="title_menu1">
-          <p class="w-64 font-medium text-orange-600">
+          <p class="md:w-64  font-medium text-orange-600">
             CÔNG TY CỔ PHẨN ĐẦU TƯ THƯƠNG MẠI DỊCH VỤ MILKTEA
           </p>
         </div>
@@ -11,11 +11,11 @@
             <i class="fas fa-map-marker-alt text-sm"></i>
             <p class="text-sm ml-3">Thôn 1 xã Hiệp Hòa, thị xã Quảng Yên, Tỉnh Quảng Ninh</p>
           </div>
-          <div class="phone flex items-center">
+          <div class="phone md:flex md:items-center ">
             <i class="fa fa-phone text-sm" aria-hidden="true"></i>
             <span class="text-sm ml-3">033898903</span>
           </div>
-          <div class="mail">
+          <div class="mail md:flex items-center">
             <i class="fas fa-mail-bulk"></i>
             <span class="text-sm ml-3">bhuy31333@gmail.com</span>
           </div>
