--- a/src/app/screen/admin/adminlayout/adminlayout.component.html
+++ b/src/app/screen/admin/adminlayout/adminlayout.component.html
@@ -183,7 +183,7 @@
             </div>
         </div>
     </div>
-    <div class="2xl:container">
+    <div class="">
         <router-outlet></router-outlet>
     </div>
 </div>
