--- a/src/app/screen/home/home.component.css
+++ b/src/app/screen/home/home.component.css
@@ -1,3 +1,17 @@
-.bg-content{
-    background-color: #fbfbfb;
+.bg-content {
+    /* background-color: #fbfbfb; */
+}
+
+.product_milk:hover .milk_text {
+    transform: translateY(0px);
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    transition: .5s;
+    
+}
+.milk_text {
+    z-index: 1000;
+}
+.bg-gradient {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
