--- a/src/app/screen/home/home.component.html
+++ b/src/app/screen/home/home.component.html
@@ -1,41 +1,133 @@
-<div class="content pb-5">
-    <div class="banner container m-auto">
-        <carousel [images]="imagess" [autoplay]="true"  [cellsToShow]="1" [height]="550">
+<div class="content font-lato">
+    <div class="banner container m-auto md:w-[1280px]">
+        <carousel [images]="imagess" [autoplay]="true" [cellsToShow]="1" [height]="550">
         </carousel>
     </div>
     <div class="main_content bg-content">
-    {{images}}
 
-        <div class="container m-auto">
+        <div class="container md:w-[1280px] m-auto">
             <div class="title_content">
                 <p class="text-center text-orange-400 italic text-2xl pt-3">TooCha Menu</p>
-                <h2 class="text-center font-semibold text-3xl mt-3">Sản Phẩm Nổi Bật</h2>
+                <h2 class="text-center  text-3xl mt-3 font-lato font-light">Sản Phẩm Nổi Bật</h2>
             </div>
             <div class="main_content">
-                <div class="product_hot md:grid md:grid-cols-4 md:gap-8 md:justify-between md:items-center mt-6  container mx-auto">
-                  <ng-container *ngFor="let item of dataProduct">
-                    <div class="product_milk mx-4 border border-gray-200 ">
-                        <div class="milk_img">
-                          <a (click)="loading()" routerLink="/sanpham/chitiet/{{item.link_sp}}"><img [src]="item.image" alt=""></a>
+                <div class="product_hot grid md:grid-cols-4 md:gap-8 md:justify-between md:items-center mt-6  grid-cols-2 container mx-auto">
+                    <ng-container *ngFor="let item of dataProduct">
+                       <div class="pb-5">
+                        <div class="product_milk  overflow-hidden mx-4  border border-gray-200 rounded shadow ">
+                            <div class="milk_img">
+                                <a (click)="loading()" routerLink="/sanpham/chitiet/{{item.link_sp}}"><img
+                                        class="hover:scale-125 duration-300" [src]="item.image" alt=""></a>
+                            </div>
+                            <div class="milk_text  text-center bg-gray-100 py-4   translate-y-10">
+                                <a routerLink="/sanpham/chitiet/{{item.link_sp}}">
+                                    <p class="font-semibold">{{item.name}}</p>
+                                </a>
+                                <p>{{item.price| currency: "VND"}}</p>
+                                <button
+                                    class="bg-orange-300 px-4 py-1 relative top-5 mb-2 hover:outline hover:outline-offset-1 hover:outline-orange-300 hover:bg-white translate-all">ĐẶT
+                                    HÀNG</button>
+                            </div>
                         </div>
-                        <div class="milk_text text-center bg-gray-100 py-4">
-                            <a routerLink="/sanpham/chitiet/{{item.link_sp}}"><p class="font-semibold">{{item.name}}</p></a>
-                            <p>{{item.price| currency: "VND"}}</p>
-                            <button class="bg-orange-300 px-4 py-1 mt-3 hover:outline hover:outline-offset-1 hover:outline-orange-300 hover:bg-white translate-all">ĐẶT HÀNG</button>
-                        </div>
-                    </div>
-                </ng-container>
-               
+                       </div>
+                    </ng-container>
+
                 </div>
                 <div class="view_all text-center">
                     <button class="bg-orange-300 px-4 py-1 mt-3 text-white">Xem Tất Cả</button>
                 </div>
             </div>
         </div>
-        <div class="promotion container m-auto">
+        <div class="promotion container m-auto pb-3">
             <div class="title_promotion">
                 <p class="text-center text-orange-400 italic text-2xl pt-3">Tin tức và khuyến mãi</p>
                 <h2 class="text-center font-semibold text-3xl mt-3">Khám phá TooCha nhận ngay khuyến mãi</h2>
+            </div>
+
+        </div>
+        <div class="bg-gradient pb-5">
+            <div class=" container mx-auto md:w-[1280px] pt-3">
+                <div class="title_news">
+                    <p class="text-[23px]">- Tin Tức</p>
+                </div>
+                <div class="news   pt-3 md:grid grid-cols-4 gap-6">
+                    <div class="overflow-hidden md:p-0 p-3">
+                        <div class="title_news ">
+                            <div class="img_news overflow-hidden rounded-[10px] hover:rounded-[10px]">
+                              <a href="">  <img class="w-[100%]  shadow  hover:scale-125 duration-300 "
+                                src="http://placeimg.com/640/480/sports"
+                                alt=""></a>
+                            </div>
+                            <div class="date_post">
+                                <span class="text-light text-black">18/5/2022</span>
+                            </div>
+                        </div>
+                        <div class=" main_news mt-3 ">
+                            <p class="font-semibold text-[17px]"><a href="http://">CÁCH NHẬN BIẾT HƯƠNG VỊ CÀ PHÊ...</a></p>
+                            <p class="">
+                                Cùng Arabica, Robusta cũng là loại cà phê nổi tiếng được sử dụng phổ biến ở Việt Nam và
+                                nhiều nước khác trên thế giới. Với nhiều đặc điểm riêng, không...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="overflow-hidden md:p-0 p-3">
+                        <div class="title_news ">
+                            <div class="img_news overflow-hidden rounded-[10px] hover:rounded-[10px]">
+                              <a href="">  <img class="w-[100%]  shadow  hover:scale-125 duration-300 "
+                                src="http://placeimg.com/640/480/sports"
+                                alt=""></a>
+                            </div>
+                            <div class="date_post">
+                                <span class="text-light text-black">18/5/2022</span>
+                            </div>
+                        </div>
+                        <div class=" main_news mt-3 ">
+                            <p class="font-semibold text-[17px]"><a href="http://">CÁCH NHẬN BIẾT HƯƠNG VỊ CÀ PHÊ...</a></p>
+                            <p class="">
+                                Cùng Arabica, Robusta cũng là loại cà phê nổi tiếng được sử dụng phổ biến ở Việt Nam và
+                                nhiều nước khác trên thế giới. Với nhiều đặc điểm riêng, không...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="overflow-hidden md:p-0 p-3">
+                        <div class="title_news ">
+                            <div class="img_news overflow-hidden rounded-[10px] hover:rounded-[10px]">
+                              <a href="">  <img class="w-[100%]  shadow  hover:scale-125 duration-300 "
+                                src="http://placeimg.com/640/480/sports"
+                                alt=""></a>
+                            </div>
+                            <div class="date_post">
+                                <span class="text-light text-black">18/5/2022</span>
+                            </div>
+                        </div>
+                        <div class=" main_news mt-3 ">
+                            <p class="font-semibold text-[17px]"><a href="http://">CÁCH NHẬN BIẾT HƯƠNG VỊ CÀ PHÊ...</a></p>
+                            <p class="">
+                                Cùng Arabica, Robusta cũng là loại cà phê nổi tiếng được sử dụng phổ biến ở Việt Nam và
+                                nhiều nước khác trên thế giới. Với nhiều đặc điểm riêng, không...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="overflow-hidden md:p-0 p-3">
+                        <div class="title_news ">
+                            <div class="img_news overflow-hidden rounded-[10px] hover:rounded-[10px]">
+                              <a href="">  <img class="w-[100%]  shadow  hover:scale-125 duration-300 "
+                                src="http://placeimg.com/640/480/sports"
+                                alt=""></a>
+                            </div>
+                            <div class="date_post">
+                                <span class="text-light text-black">18/5/2022</span>
+                            </div>
+                        </div>
+                        <div class=" main_news mt-3 ">
+                            <p class="font-semibold text-[17px]"><a href="http://">CÁCH NHẬN BIẾT HƯƠNG VỊ CÀ PHÊ...</a></p>
+                            <p class="">
+                                Cùng Arabica, Robusta cũng là loại cà phê nổi tiếng được sử dụng phổ biến ở Việt Nam và
+                                nhiều nước khác trên thế giới. Với nhiều đặc điểm riêng, không...
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
