--- a/src/app/screen/homelayout/homelayout.component.html
+++ b/src/app/screen/homelayout/homelayout.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="font-lato">
     <div class="loading " id="loading" >
         <div class="loading">Loading&#8230;</div>
     </div>
