profile: change password,history order

--- a/src/app/screen/address/address.component.html
+++ b/src/app/screen/address/address.component.html
@@ -1,37 +1,10 @@
 <div>
   
     <div class="mb-3">
-        <label for="">Số điện thoại</label>
+        <label for="">Địa chỉ</label>
         <br>
-        <input type='number' placeholder="Số điện thoại"
-            class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
-    </div>
-    <div class="mb-3">
-        <label for="">Sinh nhật (Bạn không thể thay đổi sau khi đã lựa chọn)</label>
-        <br>
-        <input type='text' placeholder="Sinh nhật"
-            class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
-    </div>
-    <div class="mb-3 flex">
-        <label for="">Giới tính: </label>
-        <br>
-        <div class="flex items-center">
-            <div>
-                Nam
-            </div>
-            <div>
-                <input type='radio' name="gender" class="" />
-            </div>
-        </div>
-        <div class="flex items-center">
-            <div>
-                Nữ
-            </div>
-            <div>
-                <input type='radio' name="gender" class="" />
-            </div>
-        </div>
-    </div>
+        <input type='text' placeholder="Địa chỉ" class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
+    </div>  
     <button class="bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-300 rounded p-2">
         Lưu thông tin
       </button>
