--- a/src/app/screen/changepassword/changepassword.component.html
+++ b/src/app/screen/changepassword/changepassword.component.html
@@ -1,1 +1,30 @@
-<p>changepassword works!</p>
+<div>
+    <div class="mb-3">
+        <label for="">Mật khẩu cũ</label>
+        <br>
+        <input type='password' placeholder="Mật khẩu cũ" class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
+    </div>
+    <div class="mb-3">
+        <label for="">Mật khẩu mới</label>
+        <br>
+        <input type='password' placeholder="Mật khẩu cũ" class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
+    </div>
+    <div class="mb-3">
+        <label for="">Nhập Lại Mật khẩu mới</label>
+        <br>
+        <input type='password' placeholder="Nhập Mật khẩu cũ" class=" mb-3 px-4 w-full py-2 border rounded-lg text-gray-700 focus:outline-none focus:border-orange-500" />
+    </div>
+    <div class="mb-3 ">
+        <label for="">Nhập mã xác thực</label>
+        <br>
+        <div class="flex items-center">
+            <input type='password' placeholder="Nhập Mật khẩu cũ" class=" mb-3 px-4 w-full py-2 border rounded-l text-gray-700 focus:outline-none focus:border-orange-500" />
+           <div>
+            <button class="bg-blue-600 px-4 mb-3 py-2 text-white rounded-r">Gửi </button>
+           </div>
+        </div>
+    </div>
+    <div class="mb-3">
+        <button class="bg-blue-600 px-4 py-2 rounded text-white ">Lưu</button>
+    </div>
+</div>
