--- a/src/app/screen/history/history.component.html
+++ b/src/app/screen/history/history.component.html
@@ -1,1 +1,22 @@
-<p>history works!</p>
+<div>
+    <table class="w-full table-auto text-left divide-y divide-gray-300">
+        <thead class="bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th class="text-gray-500 px-6 py-3">STT</th>
+                <th class="text-gray-500 px-6 py-3">Tên</th>
+                <th class="text-gray-500 px-6 py-3">Địa chỉ</th>
+                <th class="text-gray-500 px-6 py-3">Thành Tiền</th>
+                <th class="text-gray-500 px-6 py-3">Chức năng</th>
+            </tr>
+        </thead>
+        <tbody>
+                <tr>
+                    <td class="px-6 py-4"></td>
+                    <td class="px-6 py-4"></td>
+                    <td class="px-6 py-4"></td>
+                    <td class="px-6 py-4"></td>
+                    <td class="px-6 py-4"></td>
+                </tr>
+        </tbody>
+    </table>
+</div>
